; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_mp_spin_timeout.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_mp_spin_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@disable_serial_output = common dso_local global i64 0, align 8
@LockTimeOutTSC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @mp_spin_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_spin_timeout(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = call i32 (...) @cpu_pause()
  %6 = call i64 (...) @machine_timeout_suspended()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %2, align 4
  br label %28

10:                                               ; preds = %1
  %11 = load i64, i64* @disable_serial_output, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i32, i32* @LockTimeOutTSC, align 4
  %15 = shl i32 %14, 2
  br label %19

16:                                               ; preds = %10
  %17 = load i32, i32* @LockTimeOutTSC, align 4
  %18 = shl i32 %17, 4
  br label %19

19:                                               ; preds = %16, %13
  %20 = phi i32 [ %15, %13 ], [ %18, %16 ]
  %21 = sext i32 %20 to i64
  store i64 %21, i64* %4, align 8
  %22 = call i64 (...) @rdtsc64()
  %23 = load i64, i64* %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = add nsw i64 %23, %24
  %26 = icmp sgt i64 %22, %25
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %19, %8
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @cpu_pause(...) #1

declare dso_local i64 @machine_timeout_suspended(...) #1

declare dso_local i64 @rdtsc64(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
